@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>ch.seidel</groupId>
 	<artifactId>KuTu</artifactId>
-	<version>2.3.13</version>
+	<version>2.3.14</version>
 
 	<inceptionYear>2014</inceptionYear>
 
@@ -85,19 +85,20 @@
 			</build>
 		</profile>
 		<profile>
-			<id>osx</id>
+			<id>osx-intel</id>
 			<activation>
 				<os>
 					<family>mac</family>
+					<arch>x86_64</arch>
 				</os>
 			</activation>
 			<properties>
 				<javafx.os>mac</javafx.os>
-				<bundler.os>Darwin</bundler.os>
+				<bundler.os>macOS-x86_64</bundler.os>
 				<bundler.type>pkg</bundler.type>
 				<app.logo>AppIcon.icns</app.logo>
-				<javafx.version>19</javafx.version>
-				<scalafx.version>19.0.0-R30</scalafx.version>
+				<!--javafx.version>19</javafx.version>
+				<scalafx.version>19.0.0-R30</scalafx.version-->
 			</properties>
 			<build>
 				<plugins>
@@ -137,6 +138,82 @@
 										<argument>Interpolar</argument>
 										<argument>--mac-package-identifier</argument>
 										<argument>ch.seidel.kutu.KuTuApp</argument>
+										<argument>--java-options</argument>
+										<argument>"-DkutuAPPDIR=$APPDIR"</argument>
+										<argument>--java-options</argument>
+										<argument>
+											--add-opens=java.base/java.lang=ALL-UNNAMED
+											--add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+											--add-opens=java.base/java.net=ALL-UNNAMED
+											--add-opens=java.base/java.nio=ALL-UNNAMED
+											--add-opens=java.base/java.time=ALL-UNNAMED
+											--add-opens=java.base/java.util=ALL-UNNAMED
+											--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+											--add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+											--add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+										</argument>
+									</arguments>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>osx-arm</id>
+			<activation>
+				<os>
+					<family>mac</family>
+					<arch>aarch64</arch>
+				</os>
+			</activation>
+			<properties>
+				<javafx.os>mac-aarch64</javafx.os>
+				<bundler.os>macOS-aarch64</bundler.os>
+				<bundler.type>pkg</bundler.type>
+				<app.logo>AppIcon.icns</app.logo>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.codehaus.mojo</groupId>
+						<artifactId>exec-maven-plugin</artifactId>
+						<version>3.2.0</version>
+						<executions>
+							<execution>
+								<id>package-binary-distro</id>
+								<phase>package</phase>
+								<goals>
+									<goal>exec</goal>
+								</goals>
+								<configuration>
+									<executable>${jdk-home}/bin/jpackage</executable>
+									<arguments>
+										<argument>--main-class</argument>
+										<argument>ch.seidel.kutu.KuTuApp</argument>
+										<argument>--type</argument>
+										<argument>${bundler.type}</argument>
+										<argument>--input</argument>
+										<argument>${project.build.directory}/package</argument>
+										<argument>--dest</argument>
+										<argument>${project.build.directory}/${bundler.os}</argument>
+										<argument>--name</argument>
+										<argument>TurnerWettkampf-App-v${parsedVersion.majorVersion}r${parsedVersion.minorVersion}</argument>
+										<argument>--app-version</argument>
+										<argument>${app.version}</argument>
+										<argument>--main-jar</argument>
+										<argument>${project.artifactId}-${app.version}.jar</argument>
+										<argument>--icon</argument>
+										<argument>${project.build.sourceDirectory}/../resources/images/${app.logo}</argument>
+										<argument>--copyright</argument>
+										<argument>Interpolar</argument>
+										<argument>--vendor</argument>
+										<argument>Interpolar</argument>
+										<argument>--mac-package-identifier</argument>
+										<argument>ch.seidel.kutu.KuTuApp</argument>
+										<argument>--mac-package-name</argument>
+										<argument>KuTuApp-v${parsedVersion.majorVersion}r${parsedVersion.minorVersion}</argument>
 										<argument>--java-options</argument>
 										<argument>"-DkutuAPPDIR=$APPDIR"</argument>
 										<argument>--java-options</argument>
@@ -246,7 +323,7 @@
 		<scala.majorversion>2.13</scala.majorversion>
 		<scala.version>2.13.13</scala.version>
 		<akkaHttp.version>10.5.3</akkaHttp.version>
-		<javafx.version>21.0.3</javafx.version>
+		<javafx.version>21.0.4</javafx.version>
 		<akka.version>2.8.5</akka.version>
 		<scalafx.version>21.0.0-R32</scalafx.version>
 		<!--scalafx.version>20.0.0-R31</scalafx.version-->
